--- a/compose/monitoring/grafana/docker-compose.yml
+++ b/compose/monitoring/grafana/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: grafana/grafana-oss:latest
     container_name: grafana
     user: '0'
+    restart: unless-stopped
     ports:
       - "3456:3000"
     volumes:
