--- a/compose/monitoring/influxdb-v2/docker-compose.yml
+++ b/compose/monitoring/influxdb-v2/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   influxdb:
     image: influxdb:2.7
     container_name: influxdb
+    restart: unless-stopped
     ports:
       - "8086:8086"
     volumes:
