--- a/compose/calibre/docker-compose.yml
+++ b/compose/calibre/docker-compose.yml
@@ -6,7 +6,6 @@ services:
       - PUID=1000
       - PGID=100
       - TZ=Asia/Kolkata
-      - DOCKER_MODS=lscr.io/linuxserver/mods:universal-calibre-v7.16.0
     volumes:
       - /home/yash/docker/volumes/calibre/config:/config
       - ./ingest:/cwa-book-ingest
@@ -14,5 +13,24 @@ services:
       #- /path/to/your/gmail/credentials.json:/app/calibre-web/gmail.json #Optional
     ports:
       - 48083:8083
-      - 48084:8084
+    restart: unless-stopped
+
+  calibre-web-automated-book-downloader:
+    image: ghcr.io/calibrain/calibre-web-automated-book-downloader:latest
+    environment:
+      FLASK_PORT: 8084
+      FLASK_DEBUG: false
+      CLOUDFLARE_PROXY_URL: http://cloudflarebypassforscraping:8000
+      INGEST_DIR: /cwa-book-ingest
+      BOOK_LANGUAGE: en
+    ports:
+      - 48085:8084
+    restart: unless-stopped
+    volumes:
+      # This is where the books will be downloaded to, usually it would be
+      # the same as whatever you gave in "calibre-web-automated"
+      - ./ingest:${INGEST_DIR:-/cwa-book-ingest}
+
+  cloudflarebypassforscraping:
+    image: ghcr.io/sarperavci/cloudflarebypassforscraping:latest
     restart: unless-stopped
