--- a/compose/it-tools/docker-compose.yml
+++ b/compose/it-tools/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   it-tools:
     image: ghcr.io/corentinth/it-tools:latest
     container_name: it-tools
-    restart: unless-stopped
+    restart: always
     networks:
       - proxy
 
