--- a/compose/monitoring/grafana/docker-compose.yml
+++ b/compose/monitoring/grafana/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: grafana/grafana-oss:latest
     container_name: grafana
     user: '0'
-    restart: unless-stopped
+    restart: always
     # ports:
     #   - '3456:3000'
     networks:
