--- a/compose/monitoring/influxdb-v2/docker-compose.yml
+++ b/compose/monitoring/influxdb-v2/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   influxdb:
     image: influxdb:2.7
     container_name: influxdb
-    restart: unless-stopped
+    restart: always
     # ports:
     #   - '8086:8086'
     networks:
