--- a/compose/npm/docker-compose.yml
+++ b/compose/npm/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     image: 'jc21/nginx-proxy-manager:latest'
-    restart: unless-stopped
+    restart: always
     ports:
       - '80:80'
       - '443:443'
